fix: link lines on firefox (display inline-block)

--- a/sass/components/_links.scss
+++ b/sass/components/_links.scss
@@ -1,5 +1,6 @@
 .link {
     position: relative;
+    display: inline-block;
     text-align: center;
     font-family: $fontMain, serif;
     font-size: $fontSizeLG;
